[package]
name = "yaid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
frankenstein = "0.19.1"
reqwest = { version = "0.11.11", features = ["json"] }
serde = "1.0.140"
serde_json = "1.0.82"
tokio = { version = "1.20.1", features = ["full"] }
