[package]
name = "yaid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.3"
frankenstein = "0.19.1"
reqwest = { version = "0.11.11", features = ["json"] }
serde = "1.0.140"
tokio = { version = "1.20.3", features = ["full"] }
